[metadata]
name = acrypt
version = 0.0.1
author = Jan
author_email = jan091@gmx.at
description = a new encoding and decoding principle
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Jan13295/acryp
project_urls =
    repository = https://github.com/Jan13295/acryp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src